sillytavern/01-sillytavern-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: sillytavern
  name: sillytavern
  namespace: sillytavern
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sillytavern
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sillytavern
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: FORCE_COLOR
          value: "1"
        - name: SILLYTAVERN_HEARTBEAT_INTERVAL
          value: "30"
        image: ghcr.io/sillytavern/sillytavern:latest
        imagePullPolicy: Always
        name: sillytavern
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 3096Mi
          requests:
            cpu: "1"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/app/config
          name: sillytavern-config-storage
        - mountPath: /home/node/app/data
          name: sillytavern-data-storage
        - mountPath: /home/node/app/plugins
          name: sillytavern-plugins-storage
        - mountPath: /home/node/app/public/scripts/extensions/third-party
          name: sillytavern-extensions-storage
      dnsPolicy: ClusterFirst
      nodeName: htpc.local
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /srv/apps/nn/SillyTavern
          type: ""
        name: sillytavern-config-storage
      - hostPath:
          path: /srv/apps/nn/SillyTavern/data
          type: ""
        name: sillytavern-data-storage
      - hostPath:
          path: /srv/apps/nn/SillyTavern/plugins
          type: ""
        name: sillytavern-plugins-storage
      - hostPath:
          path: /srv/apps/nn/SillyTavern/public/scripts/extensions/third-party
          type: ""
        name: sillytavern-extensions-storage
