sillytavern/02-sillytavern-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sillytavern
  name: sillytavern
  namespace: sillytavern
spec:
  clusterIP: 10.43.123.146
  clusterIPs:
  - 10.43.123.146
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
  selector:
    app: sillytavern
