sillytavern/03-sillytavern-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sillytavern-ingress
  namespace: sillytavern
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`sillytavern.home.bakatrouble.me`)
    services:
    - kind: Service
      name: sillytavern
      namespace: sillytavern
      port: 8000
  tls:
    certResolver: default
